<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reload"
        android:title="@string/action_reload"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_desktop_site"
        android:title="@string/action_desktop_site"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_software_rendering"
        android:title="@string/action_software_rendering"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_theme"
        android:title="@string/action_theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_debug_log"
        android:title="@string/action_debug_log"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_check_update"
        android:title="@string/action_check_update"
        app:showAsAction="never" />
</menu>
